--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
         <h1>EXPERIENCES</h1>
         <h1>CONTENT</h1>
     </div>
-    <div id="fixed-image">
 
-    </div>
+    <div id="fixed-image"></div>
     <div id="main">
 
         <div id="page1">
@@ -91,9 +90,9 @@
                 </div>
             </div>
             <div id="gooey">
-
             </div>
         </div>
+
         <div id="page3">
             <div id="elem-container">
                 <div id="elem1" class="elem"
@@ -133,6 +132,7 @@
                 </div>
             </div>
         </div>
+
         <div id="page4">
             <div class="swiper mySwiper">
                 <div class="swiper-wrapper">
@@ -147,24 +147,24 @@
 
             </div>
         </div>
-        <div id="page5">
 
-        </div>
+        <div id="page5"></div>
+        
         <div id="full-scr">
-            <div id="full-div1">
-                
+            <div id="full-div1"> 
             </div>
         </div>
     </div>
+
     <div id="footer">
         <div id="footer-div">
-
         </div>
         <h1>Sundown</h1>
         <div id="footer-bottom">
-
         </div>
     </div>
+
+
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="script.js"></script>
